# RustGame

./: .gitignore  Cargo.toml  README.md
assets/rooms/: room.rm
assets/textures/: entities.json  tiles.json
src/: main.rs
src/assets/: mod.rs  sprite_sheet.rs  texture_atlas.rs  texture_region.rs
src/entities/: archetype.rs  mod.rs
src/entities/components/: mod.rs  position.rs
src/entities/systems/: mod.rs
src/map/: mod.rs  tile.rs
src/maths/: mod.rs  transform.rs  vector.rs
src/render/: camera.rs  mod.rs
texture_packer/: Cargo.toml
texture_packer/src/: lib.rs  main.rs
