[package]
name = "rust_game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tiled = "0.11.1"
lazy_static = "1.4.0"

[dependencies.sdl2]
version = "0.35"
default-features = false
features = ["ttf","image","mixer"]
