[package]
name = "rust_game"
version = "0.1.0"
edition = "2021"

[dependencies]
const_format = "0.2.31"
serde = { version = "1.0.171", features = ["derive"] }
serde_json = "1.0.103"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.sdl2]
version = "0.35"
default-features = false
features = ["ttf","image","mixer", "bundled", "unsafe_textures"]
